testing touch top and fixed width on mobile

--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,700);
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
+@import url(http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400);
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400);
 
 html,body,div,span,applet,object,iframe,
 h1,h2,h3,h4,h5,h6,p,blockquote,pre,
@@ -40,6 +40,7 @@ html, body {
 
 body {
   overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 #wrapper {
@@ -123,7 +124,7 @@ p.last, a.last {
   -ms-user-select: none;
   overflow: hidden;
   overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
+
 }
 
 #coin-list ul {
@@ -256,6 +257,7 @@ footer a {
 button {
   position: relative;
   padding: 17px 30px 18px 30px;
+  margin: 0 10px 10px 0;
   border: none;
   background: #232323;
   color: #aaa;
@@ -266,7 +268,6 @@ button {
   font-family: 'Lato', Helvetica, sans-serif;
   font-weight: 400;
   outline: none;
-  margin: 0;
   transition: background 0.1s ease-in-out;
 }
 
@@ -301,203 +302,15 @@ button:active {
 }
 
 #list-toggle { display: none; }
-/*
-#coin-list ul {
-  margin: 300px 0 0 0;
-}
-
-#coin-list ul li {
-  width: 100%;
-  height: 300px;
-  background: #232323;
-  border-bottom: 1px solid #333;
-}
-
-#coin-list ul li .wallet-container {
-  width: 960px;
-  margin: 0 auto;
-}
-
-#coin-list ul li .left {
-  width: 25%;
-  min-width: 300px;
-  font-size: 30px;
-  letter-spacing: 1px;
-  display: inline-block;
-}
-
-#coin-list ul li .left h2 {
-  line-height: 300px;
-  color: #ddd;
-}
-
-#coin-list ul li .right {
-  display: inline-block;
-  width: 75;
-  font-size: 30px;
-  letter-spacing: 1px;
-}
-
-#coin-list ul li .right {
-  position: relative;
-  font-size: 12px;
-  color: #ddd;
-}
-
-#coin-list ul li .right .keys {
-  position: absolute;
-  top: 50%;
-  margin: -70px 0 0 0;
-}
-
-#coin-list ul li .right .keys h3 {
-  margin: 10px 0 0 0;
-  color: #aaa;
-}
-
-.public {
-  margin: 0 0 40px 0;
-}
-.public span, .private span {
-  font-family: 'Gentium Book Basic', Georgia, serif;
-  font-size: 20px;
-  color: #55d55d;
-  display: block;
-}
-
-#form {
-  position: relative;
-  width: 60%;
-  max-width: 800px;
-}
-
-#keys {
-  margin: 100px 0 0 0;
-}
-
-.field {
-  position: relative;
-  margin: 0 0 30px 0;
-}
-
-button {
-  position: relative;
-  top: -1px;
-  padding: 17px 30px 18px 30px;
-  border: none;
-  border-radius: 6px;
-  background: #232323;
-  color: #00538e;
-  text-align: center;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.1);
-  font: normal 11px/1 "asapregular", Helvetica, sans-serif;
-  letter-spacing: 1px;
-  font-size: 14px;
-  text-transform: uppercase;
-  font-weight: 700;
-  box-shadow: 0 3px 0 #00538e;
-  outline: none;
-  margin: 0;
-  transition: background 0.2s ease-in-out;
-}
-
-button:hover {
-  background: #408cbc;
-  cursor: pointer;
-}
-
-button:active {
-  -moz-box-shadow: inset 0px 2px rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: inset 0px 2px rgba(0, 0, 0, 0.2);
-  box-shadow: inset 0px 2px rgba(0, 0, 0, 0.2);
-}
-
-.field label {
-  position: absolute;
-  text-transform: uppercase;
-  font-size: 12px;
-  letter-spacing: 1px;
-  line-height: 59px;
-  display: inline-block;
-  margin: 0 0 10px 0;
-  background: #eee;
-  z-index: 1;
-  width: 135px;
-  height: 59px;
-  padding: 0 0 0 20px;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  color: #4797c9;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-}
-
-.field input[type=text] {
-  position: relative;
-  height: 59px;
-  margin: 0 auto;
-  padding: 20px 20px 20px 170px;
-  width: 100%;
-  border: none;
-  border-radius: 5px;
-  font-size: 14px;
-  color: #999;
-  box-sizing:border-box;
-  -moz-box-sizing:border-box;
-}
-
-footer {
-  height: 500px;
-  background: green;
-}
-
-*/
-
-input[type=text]:focus, textarea:focus { outline: none; }
-
-::-webkit-input-placeholder { color: #ccc; }
-:-moz-placeholder { color: #ccc; }
-::-moz-placeholder { color: #ccc; }
-:-ms-input-placeholder { color: #ccc; }
 
 /* Media Queries */
 
   /* Bigger than 960 */
   @media only screen and (min-width: 1300px) {
-    section { width: 1280px; }
   }
 
   /* Tablet Portrait size to standard 960 (devices and browsers) */
   @media only screen and (max-width: 959px) {
-    section { width: 768px; }
-
-    h1 { font-size: 40px; }
-    #form {
-      width: 80%;
-      top: 50px;
-      -webkit-transform: translate(-50%, 0);
-      -ms-transform: translate(-50%, 0);
-      transform: translate(-50%, 0);
-    }
-
-
-    .field { margin: 0 0 50px 0; }
-
-    .field label {
-      position: absolute;
-      top: -45px;
-      display: inline-block;
-      margin: 0 0 10px 0;
-      background: none;
-      z-index: 1;
-      padding: 0;
-      color: #4797c9;
-    }
-
-    .field input[type=text] {
-      padding: 20px;
-    }
   }
 
   /* All Mobile Sizes (devices and browser)
@@ -516,16 +329,11 @@ input[type=text]:focus, textarea:focus { outline: none; }
 
     #coin-list ul li span, #header-logo h1 { margin-left: 30px; }
 
-    #list-toggle {
-      display: inline-block;
-    }
+    #list-toggle { display: inline-block; }
 
-    #page-content {
-      overflow-x: hidden;
-      -webkit-overflow-scrolling: touch;
-    }
+    #footer-content .right { min-width: 0; }
 
-    #wallet-info h2#coin-label { margin: 0 0 40px 0; }
+    #wallet-info h2#coin-label { margin: 0 0 40px 0; font-size: 20px; }
 
     #page-content #wallet-info, #footer-content { padding: 30px; }
 
@@ -535,9 +343,7 @@ input[type=text]:focus, textarea:focus { outline: none; }
 
     #footer-content .left, #footer-content .right { width: 100%; }
 
-    #public-address, #private-key, #secret-key, .donate-key {
-      word-wrap: break-word;
-    }
+    #public-address, #private-key, #secret-key, .donate-key { word-wrap: break-word; }
 
     #donate-keys .coin-name { display: block; }
 
